syntax = "proto3";
package acme.api.v1;

option java_package = "com.acme.api.v1";

option java_outer_classname = "DevicePb";

import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/type/date.proto";

service DeviceService {
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse) {}
}

message GetDeviceRequest{
  string tenant_code = 1;
  string id = 2; // unique id
  google.protobuf.FieldMask field_projections = 5;
}

message GetDeviceResponse{
  Device device = 1;
}


// Schema for Device
message Device {
  string id = 1; // unique id
  string device_id = 2;
  string firmware_version = 5;
  string hardware_version = 6;
  string device_model = 10;
  string device_state = 15;
  string type = 17;
  string comm_technology = 18;
}

// Enum for Device Type
enum Type {
  TYPE_NOT_DEFINED = 0;
  METER = 1;
  GATEWAY = 2;
}
